# classiq-ha

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  helpers.py  logger.py  models.py  queue.py  routes.py  settings.py  tasks.py
tests/: qc_example.json  test_helpers.py  test_integration.py  test_routes.py  test_tasks.py
